[package]
name = "eiffelvis"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*", "tools/*"]

[dependencies]
tokio = { version = "1.13", features = ["full"]}
eiffelvis_http = { path = "crates/eiffelvis_http", version = "0.1"}
eiffelvis_stream = { path = "crates/eiffelvis_stream", version = "0.1"}
eiffelvis_core = { path = "crates/eiffelvis_core", version = "0.1"}
serde = { version="1.0", features=["derive"]}
serde_json = { version = "1.0" }
tracing = "0.1"
tracing-subscriber = "0.3"
structopt = "0.3"
