[package]
name = "eiffelvis_gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features=["derive"]}
uuid = { version = "0.8", features=["serde", "v4"]}
serde_json = { version = "1.0" }