[package]
name = "eiffelvis_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version="1.0", features=["derive"]}
serde_json = { version = "1.0" }
uuid = { version = "1.1", features=["serde", "v4"]}
rand = { version = "0.8", features=[ "getrandom" ]}
rand_pcg = "0.3"
rand_seeder = "0.2"
