[package]
name = "eiffelvis_http"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.3"
hyper = { version = "0.14", features = ["full"]}
tokio = { version = "1.0", features = ["full"]}
tower = "0.4"
tower-http = { version = "0.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.2"
eiffelvis_core = { path="../eiffelvis_core" }