[package]
name = "eiffelvis_http"
version = "0.1.0"
edition = "2018"


[dependencies]
tokio = { version = "1.0", features = ["full"]}
futures = "0.3"
axum = { version = "0.2", features = ["ws", "headers"] }
headers = "0.3"
hyper = { version = "0.14", features = ["full"]}
tower = "0.4"
tower-http = { version = "0.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features=["serde", "v4"]}
serde = { version="1.0", features=["derive"]}
serde_json = { version = "1.0" }
anyhow = "^1.0"
eiffelvis_core = { path = "../eiffelvis_core", version = "0.1"}
