[package]
name = "eiffelvis_http"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23", features = ["full"]}
futures = "0.3"
axum = { version = "0.5", features = ["ws", "headers"] }
axum-server = { version = "0.4", features = ["tls-rustls"]}
headers = "0.3"
hyper = { version = "0.14", features = ["full"]}
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.1", features=["serde", "v4"]}
serde = { version="1.0", features=["derive"]}
serde_json = { version = "1.0" }
anyhow = "^1.0"
eiffelvis_core = { path = "../eiffelvis_core", version = "0.1" }

