[package]
name = "eiffelvis_stream"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = { version = "2",  default-features = false, features = ["rustls-native-certs"] }
tokio-executor-trait = "2"
tokio-reactor-trait = "1"
futures = "0.3"
eiffelvis_gen = { path = "../eiffelvis_gen", version = "0.1" }
serde = { version="1.0", features=["derive"]}
serde_json = { version = "1.0" }
