[package]
name = "eiffelvis_stream"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.1"
tokio = { version = "1.24", features = ["full"]}
futures = "0.3"
eiffelvis_gen = { path = "../eiffelvis_gen", version = "0.1" }
serde = { version="1.0", features=["derive"]}
serde_json = { version = "1.0" }
tokio-reactor-trait = "1.1.0"
tokio-executor-trait = "2.1.0"
