[package]
name = "event_sender"
version = "0.1.0"
edition = "2021"

[dependencies]
eiffelvis_gen = { version = "0.1", path = "../../crates/eiffelvis_gen"}
lapin = { version = "2",  default-features = false, features = ["rustls-native-certs"] }
tokio-executor-trait = "2"
tokio-reactor-trait = "1"
tokio = { version = "1", features = ["rt", "parking_lot"]}
anyhow = "1.0"
structopt = { version = "0.3", default-features = false }
rand = "0.8"
