[package]
name = "event_sender"
version = "0.1.0"
edition = "2021"

[dependencies]
eiffelvis_gen = { version = "0.1", path = "../../crates/eiffelvis_gen"}
lapin = "2.1"
tokio = { version = "1.19", features = ["rt", "parking_lot"]}
anyhow = "1.0"
clap = { version = "3.2.5", features = ["derive"] }
rand = "0.8"
tokio-reactor-trait = "1.1.0"
tokio-executor-trait = "2.1.0"
